Add the POS tracetype

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -221,6 +221,7 @@ typedef enum {
 #else
 	TRACE_DLT_RAW = 12,
 #endif
+	TRACE_DLT_PPP_SERIAL = 50,
 	TRACE_DLT_LINKTYPE_RAW = 101,
 	TRACE_DLT_C_HDLC = 104,
 	TRACE_DLT_IEEE802_11 = 105,
