--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -326,6 +326,42 @@ typedef enum {
 	TRACE_RT_LAST			= (2<<31)
 } libtrace_rt_types_t;
 
+/** IP Protocol values */
+typedef enum {
+	TRACE_IPPROTO_IP	= 0,	/**< IP pseudo protocol number */
+	TRACE_IPPROTO_ICMP	= 1,	/**< Internet Control Message protocol */
+	TRACE_IPPROTO_IGMP	= 2,	/**< Internet Group Management Protocol */
+	TRACE_IPPROTO_IPIP	= 4,	/**< IP encapsulated in IP */
+	TRACE_IPPROTO_TCP	= 6,	/**< Transmission Controll Protocol */
+	TRACE_IPPROTO_UDP	= 17,	/**< User Datagram Protocol */
+	TRACE_IPPROTO_IPV6	= 41,	/**< IPv6 over IPv4 */
+	TRACE_IPPROTO_ROUTING	= 43,	/**< IPv6 routing header */
+	TRACE_IPPROTO_FRAGMENT	= 44,	/**< IPv6 Fragmentation header */
+	TRACE_IPPROTO_RSVP	= 46,	/**< Resource Reservation Protocol */
+	TRACE_IPPROTO_GRE	= 47,	/**< General Routing Encapsulation */
+	TRACE_IPPROTO_ESP	= 50,	/**< Encapsulated Security Payload [RFC2406] */
+	TRACE_IPPROTO_AH	= 51,	/**< Autehtnication Header [RFC2402 */
+	TRACE_IPPROTO_ICMPV6	= 58,	/**< ICMPv6 */
+	TRACE_IPPROTO_NONE	= 59,	/**< IPv6 no next header */
+	TRACE_IPPROTO_DSTOPTS	= 60,	/**< IPv6 destination options */
+	TRACE_IPPROTO_PIM	= 103,	/**< Protocol Independant Multicast */
+	TRACE_IPPROTO_SCTP	= 132	/**< Stream Control Transmission Protocol */
+} libtrace_ipproto_t;
+
+/** Ethertypes */
+typedef enum {
+	/* Numbers <=1500 are of course, LLC/SNAP */
+	TRACE_ETHERTYPE_IP	= 0x0800,	/**< IPv4 */
+	TRACE_ETHERTYPE_ARP	= 0x0806,	/**< Address resolution protocol */
+	TRACE_ETHERTYPE_RARP	= 0x8035,	/**< Reverse ARP */
+	TRACE_ETHERTYPE_8021Q	= 0x8100,	/**< 802.1q VLAN Extended Header */
+	TRACE_ETHERTYPE_IPV6	= 0x86DD,	/**< IPv6 */
+	TRACE_ETHERTYPE_MPLS	= 0x8847,	/**< MPLS Unicast traffic */
+	TRACE_ETHERTYPE_MPLS_MC = 0x8848,	/**< MPLS Multicast traffic */
+	TRACE_ETHERTYPE_PPP_DISC = 0x8863,	/**< PPPoE Service Discovery */
+	TRACE_ETHERTYPE_PPP_SES = 0x8864	/**< PPPoE Session Messages */
+} libtrace_ethertype_t;
+
 /** The libtrace packet structure, applications shouldn't be 
  * meddling around in here 
  */
