--- a/configure.in
+++ b/configure.in
@@ -261,14 +261,16 @@ fi
 DAG_VERSION_NUM=$dag_drv_v
 
 
-AC_CHECK_LIB(z, gzopen)
+AC_CHECK_LIB(z, deflate)
+AC_CHECK_LIB(bz2, BZ2_bzDecompressInit)
 
 AM_CONDITIONAL([HAVE_BPF_CAPTURE], [test "$ac_cv_have_decl_BIOCSETIF" = yes ])
 AM_CONDITIONAL([HAVE_DAG], [test "$libtrace_dag" = true])
 AM_CONDITIONAL([DAG2_4], [test "$libtrace_dag_version" = 24])
 AM_CONDITIONAL([DAG2_5], [test "$libtrace_dag_version" = 25])
 AM_CONDITIONAL([DAG3_0], [test "$libtrace_dag_version" = 30])
-AM_CONDITIONAL([HAVE_ZLIB], [test "$ac_cv_lib_z_gzopen" = yes])
+AM_CONDITIONAL([HAVE_ZLIB], [test "$ac_cv_lib_z_deflate" = yes])
+AM_CONDITIONAL([HAVE_BZLIB], [test "$ac_cv_lib_bz_BZ2_bzDecompressInit" = yes])
 AM_CONDITIONAL([HAVE_NETPACKET_PACKET_H], [test "$libtrace_netpacket_packet_h" = true])
 AM_CONDITIONAL([HAVE_LIBGDC], [test "$ac_cv_header_gdc_h" = yes])
 
@@ -303,7 +305,8 @@ reportopt() {
 echo
 AC_MSG_NOTICE([Libtrace version $PACKAGE_VERSION])
 reportopt "Compiled with PCAP 0.8 support" $ac_cv_lib_pcap_pcap_next_ex
-reportopt "Compiled with compressed trace (zlib) support" $ac_cv_lib_z_gzopen
+reportopt "Compiled with compressed trace (zlib) support" $ac_cv_lib_z_deflate
+reportopt "Compiled with compressed trace (bz2) support" $ac_cv_lib_bz2_BZ2_bzDecompressInit
 if test x"$libtrace_dag" = xtrue; then
 	if test "$libtrace_dag_version" = 24; then
 		AC_MSG_NOTICE([Compiled with DAG live capture support: 2.4])
