Fix annoying typo.

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -1635,7 +1635,7 @@ size_t trace_get_capture_length(const libtrace_packet_t *packet);
  * @return the size of the packet as it was on the wire.
  * @note Due to the trace being a header capture, or anonymisation this may
  * not be the same as the Capture Len.
- * @note trace_getwire_length \em{includes} FCS.
+ * @note trace_get_wire_length \em{includes} FCS.  This is different to pcap based tools.
  * @note The return size refers to the network-level payload of the packet and
  * does not include any capture framing headers. For example, an Ethernet 
  * packet with an empty TCP packet will return sizeof(ethernet_header) + 
