Don't use += when = will work

--- a/tools/tracetop/Makefile.am
+++ b/tools/tracetop/Makefile.am
@@ -4,4 +4,4 @@ EXTRA_DIST = $(man_MANS)
 
 include ../Makefile.tools
 tracetop_SOURCES = tracetop.cc
-tracetop_LDADD += -lncurses 
+tracetop_LDADD = -lncurses 
