--- a/configure.in
+++ b/configure.in
@@ -51,7 +51,7 @@ AC_HEADER_TIME
 AC_SYS_LARGEFILE
 
 if test "$GCC" = "yes"; then
-	CFLAGS="$CFLAGS -Wall -W -Wmissing-prototypes"
+	CFLAGS="$CFLAGS -Wall -Wextra -Wmissing-prototypes -O2 -DLT_BUILDING_DLL=1 -fvisibility=hidden"
 fi
 
 AC_PROG_LIBTOOL
