Be quieter when using automake1.11 quiet builds

--- a/libpacketdump/Makefile.am
+++ b/libpacketdump/Makefile.am
@@ -140,7 +140,7 @@ AM_YFLAGS=-d
 EXTRA_DIST=lexer.l parser.y
 
 install-exec-hook:
-	mkdir -p $(DESTDIR)$(plugindir)
-	cd $(DESTDIR)$(plugindir) && $(LN_S) -f eth_2048.so ppp_33.so
-	cd $(DESTDIR)$(plugindir) && $(LN_S) -f eth_2048.so link_5.so
-	cd $(DESTDIR)$(plugindir) && $(LN_S) -f ip_41.protocol eth_34525.protocol
+	$(AM_V_GEN)mkdir -p $(DESTDIR)$(plugindir)
+	$(AM_V_GEN)cd $(DESTDIR)$(plugindir) && $(LN_S) -f eth_2048.so ppp_33.so
+	$(AM_V_GEN)cd $(DESTDIR)$(plugindir) && $(LN_S) -f eth_2048.so link_5.so
+	$(AM_V_GEN)cd $(DESTDIR)$(plugindir) && $(LN_S) -f ip_41.protocol eth_34525.protocol
