--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -1,6 +1,6 @@
 # tracedump depends on libpacketdump
 TRACEDUMP_DIR=tracepktdump
 
-SUBDIRS=traceanon tracemerge tracesplit $(TRACEDUMP_DIR) tracertstats tracestats
-SUBDIRS+=tracereport tracetop
+SUBDIRS=traceanon tracemerge tracesplit $(TRACEDUMP_DIR) tracertstats tracestats 
+SUBDIRS+=tracereport tracetop tracereplay
 
