--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -2,5 +2,5 @@
 TRACEDUMP_DIR=tracepktdump
 
 SUBDIRS=traceanon tracemerge tracesplit $(TRACEDUMP_DIR) tracertstats tracestats 
-SUBDIRS+=tracereport tracetop tracereplay
+SUBDIRS+=tracereport tracetop tracereplay tracediff
 
