Create a new "NonData" link type for things that aren't data at all

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -265,8 +265,8 @@ typedef enum {
        TRACE_TYPE_80211_RADIO = 15,  /**< Radiotap + 802.11 */
        TRACE_TYPE_LLCSNAP = 16,      /**< Raw LLC/SNAP */
        TRACE_TYPE_PPP = 17,	     /**< PPP frames */
-       TRACE_TYPE_METADATA = 18	     	/**< WDCAP-style meta-data */
-	
+       TRACE_TYPE_METADATA = 18,     	/**< WDCAP-style meta-data */
+       TRACE_TYPE_NONDATA = 19		/**< Not a data packet */
 } libtrace_linktype_t;
 
 /** RT protocol base format identifiers.
