--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -27,7 +27,7 @@
  * along with libtrace; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: libtrace.h 773 2006-05-01 12:58:09Z perry $
+ * $Id$
  *
  */
 
@@ -42,7 +42,7 @@
  * @author Perry Lorier
  * @author Shane Alcock
  *
- * @version $Id: libtrace.h 773 2006-05-01 12:58:09Z perry $
+ * @version $Id$
  *
  * This library provides a per packet interface into a trace file, or a live 
  * captures.  It supports ERF, DAG cards, PCAP, Linux and BSD native sockets,
