--- a/configure.in
+++ b/configure.in
@@ -79,7 +79,7 @@ AC_REPLACE_FUNCS(strndup)
 
 # Checks for header files.
 AC_HEADER_STDC
-AC_CHECK_HEADERS(pcap.h pcap-int.h pcap-bpf.h net/bpf.h sys/limits.h stddef.h inttypes.h limits.h net/ethernet.h )
+AC_CHECK_HEADERS(pcap.h pcap-int.h pcap-bpf.h net/bpf.h sys/limits.h stddef.h inttypes.h limits.h net/ethernet.h sys/prctl.h)
 
 AC_CHECK_HEADERS(netinet/in.h)
 AC_CHECK_HEADERS(netpacket/packet.h,[
